# auth-thing

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yaml  fly.toml  makefile  typos.toml
backend/: .gitignore  Cargo.toml  makefile  openapi.json
backend/.config/: nextest.toml
backend/database/: Cargo.toml
backend/database/.sqlx/: query-09f806bb4d5dcf4663d8ae6e616563a0a6f853a2559f1a4f12886ca0de2bd7eb.json  query-09fd17c28b3c7ec033f4521ab5bb3f58b24c3335ce2d899965dd7d8146d2d9c3.json  query-0a6919de517b967f451fe226d7d999930788cb50a8b88470ad401bf386e9a77f.json  query-0aaebba877e7870f0eb0b0901e08b86582e180cb7b8106ac2d09fec9fb25df18.json  query-10002b53707176108798100190e4f85d3a25efda49ad76f405ebbb29bcbb1e1a.json  query-1137aecc49382dfbb73871d356d9423f48b5cbcaf847be377b8cb54c2401d265.json  query-113fa1803b62ca32f6f34b638db608a50de5ba023dfd2a47936567874280541b.json  query-122fc25776a5e18d4aa785942bc5ca5938898cde5ac1143ac53ae5dbc4c6251a.json  query-13e84ef23ae417a2fedcd2cb8243dfdf76a577b1ea14beea5197cc9182373ba6.json  query-1b50d282997c6b78d89576fa04b3b94b721616d3cae481cff30356d68fd959e2.json  query-1e7ad43f19855eb1b964fe96352f3030921302bbe7f2d7bb24d1fe890a1e60de.json  query-2489878bb51623675b7fa0613d2f03f2519e206413bb0fbbcde011cb180b363d.json  query-248a494d722704cdc7015e389118e864945c1d950ddfb1801337d0e4ac4a45b5.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2c28d36e2489c46ff2b34e0652f24de65b9f750d2a8c7f6a2ebac36719097cf4.json  query-31a8c51422331ee3b6dde393be37d7ac14956b83f3af0c09698e6cac204b2e27.json  query-320473ae4f38417ab2d42c442d23bc2b2e13578d4dab21b2434b3fad7047d89f.json  query-322f68e307f053f8cd365bdddd8b85b821cb36a3e32196655a9822ef498b5e69.json  query-35b508289b33d3e050529e13060aaef17cdb915d71471b5f3d2e3b332ca545ad.json  query-3dd1e6ab5b10be45c3930c13e541c4155c14a1944e4998d947e20df36b3d6330.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-4529316da90bef5a71cb1c8ca3a75f9f6929e579eb9fed53f2cc8cd48f49d189.json  query-45452658b92a9a47ecff2fd4e95c42c2f7f87c9abdb2e8cc4fdec32e5b929c4b.json  query-4ad401cabe84d7f835590ebf1af06a585793b9eb1f081acbc16f5bd84957ac74.json  query-5038a31df3cb1ddf106b4983227db9369f433e9ca1df6b11b6cd7f782a32015d.json  query-513dac52611da2991d1b0b78c74c156f520457673bf355f27b3f136d8da4c7b2.json  query-565fe966f66509f046beccde07bdc4f9cccb81c4ed684d7c131f0bf5af05627d.json  query-63033c45e247fb502b088e6f13346dbce308e2daebcc88573a752e1ed88e2abb.json  query-6510d998f9f13c2db89fdb9e2a403f65843c91e4bb86d34ba43db32981e90148.json  query-6df844300565c6a691ac7a3ee4b550883ded4d54cd61c119ef32751ca1adaee3.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-79e0374023419f13ae0bc5096b8505d6797625675a329ae827bac89b19a4d835.json  query-7b9b48eda70c9af237c2c23522f61e3a29e2f698ad6d7cd9be92705854126c8b.json  query-7c7a0a8013a057b63429b8bbd455568d300979a4e9af4deb6e12939bbdd0949b.json  query-8004c1a6a086136bdbf80f20305854c19861e41f73b06ab54a13714ac45c6c7b.json  query-84a6db258614e8282509c1a174004c4cd3a825976fac2bfa7eea0cb285b7f70a.json  query-89a21096a7f463acad06cc1f6e1f7205b0502b0a1656448831fa193fc8ad2362.json  query-8cbcd5199d4f6b58f4b64e623d186ba03cb828a0dc2c5b2c63c1e0102f36c0b3.json  query-8d83e74f29e9225c184f7548f516f23c410c23d8acff28f0c2da1a2afce6be06.json  query-8f7b597082c8806a01b92d6943f8d5442e07aa583064dcc151f9f88c99aee4ed.json  (+18 more)
backend/database/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_data.up.sql
backend/database/seeds/: data.sql
backend/database/seeds/e2e/: no_signup.sql
backend/database/src/: lib.rs  seeder.rs  slug.rs
backend/database/src/logic/: action_logs.rs  api_tokens.rs  applications.rs  jwt_configs.rs  mod.rs  providers.rs  roles.rs  users.rs
backend/database/src/models/: action_logs.rs  api_tokens.rs  applications.rs  jwt_configs.rs  mod.rs  providers.rs  roles.rs  users.rs
backend/email/: Cargo.toml
backend/email/src/: error.rs  lib.rs  mailer.rs  message.rs
backend/jwt/: Cargo.toml
backend/jwt/src/: algorithms.rs  claims.rs  error.rs  keys.rs  lib.rs
backend/password/: Cargo.toml
backend/password/src/: builder.rs  crypto.rs  lib.rs  requirements.rs  validator.rs
backend/server/: Cargo.toml  config.toml
backend/server/scalar/: index.html  scalar.js
backend/server/src/: auth_middlewares.rs  config.rs  crypto.rs  emails.rs  error.rs  gen_openapi.rs  jwt.rs  layers.rs  main.rs  middlewares.rs  schemas.rs  state.rs  telemetry.rs
backend/server/src/email_templates/: verification.html
backend/server/src/routes/: mod.rs  openapi.rs
backend/server/src/routes/applications/: delete.rs  get.rs  mod.rs  post.rs  put.rs
backend/server/src/routes/applications/roles/: get.rs  mod.rs  post.rs
backend/server/src/routes/auth/: get.rs  mod.rs
backend/server/src/routes/auth/config/: get.rs  mod.rs
backend/server/src/routes/auth/login/: mod.rs  post.rs
backend/server/src/routes/auth/openid/google/: get.rs
backend/server/src/routes/auth/openid/microsoft/: get.rs
backend/server/src/routes/auth/signup/: mod.rs  post.rs
backend/server/src/routes/auth/verify/: mod.rs
backend/server/src/routes/auth/verify/email/: mod.rs  post.rs
backend/server/src/routes/auth/verify/otp/: mod.rs  post.rs
backend/server/src/routes/auth/wellknown/: get.rs  mod.rs
backend/server/src/routes/health/: get.rs  mod.rs
backend/server/src/routes/providers/: delete.rs  get.rs  mod.rs  post.rs  put.rs
backend/server/src/routes/roles/: delete.rs  get.rs  mod.rs  put.rs
backend/server/src/routes/users/: get.rs  mod.rs  post.rs  put.rs
backend/server/src/routes/users/roles/: delete.rs  get.rs  mod.rs  post.rs
backend/tools/: Cargo.toml
backend/tools/src/: argon2_hash.rs  gen_key_pair.rs
backend/totp/: Cargo.toml  README.md
backend/totp/src/: crypto.rs  error.rs  key.rs  lib.rs  steps.rs
database/: Cargo.toml
docs/: auth-flow.md  (+1 more)
server/: Cargo.toml
server/src/: error.rs  layers.rs  main.rs  state.rs
server/src/routes/: mod.rs
server/src/routes/users/: get.rs  post.rs
(+82 files in other folders)
