[workspace]
members = ["database", "server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
