[workspace]
members = ["database", "server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
figment = { version = "0.10.18", features = ["env", "toml"] }
http = "1.1.0"
sentry = "0.32.3"
sentry-tower = { version = "0.32.3", features = ["http"] }
sentry-tracing = "0.32.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "propagate-header", "set-header", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
