[profile.release]
lto = true
strip = true

[workspace]
members = ["database", "server", "totp"]
resolver = "2"

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base32 = "0.5.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
headers = "0.4.0"
hmac = "0.12.1"
http = "1.1.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.11.1"
sentry = "0.34.0"
sentry-tower = { version = "0.34.0", features = ["http"] }
sentry-tracing = "0.34.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha1 = "0.10.6"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-gzip", "cors", "propagate-header", "set-header", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono", "preserve_order"] }
utoipa-axum = "0.1.2"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
