[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
axum = { workspace = true }
figment = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
sentry-tracing = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

database = { path = "../database" }
