[package]
edition = "2021"
name = "database"
version = "0.1.0"

[dependencies]
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
zeroize = { workspace = true }

password = { path = "../password" }
