[package]
edition = "2021"
name = "server"
version = "0.1.0"

[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sentry = { workspace = true }
sentry-tower = { workspace = true }
sentry-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }

database = { path = "../database" }
